layer spring. text neon

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,33 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+    <div id="game">
+      <canvas
+        id="canvas"
+        style="
+          display: block;
+          font-family: Rock Salt;
+          border: 1px solid red;
+          padding: 20px;
+          margin: auto;
+          background: #353131;
+        "
+      ></canvas>
+    </div>
+    <div id="livebar"></div>
+
+    <script src="./assets/js/constants.js"></script>
+    <script src="./assets/js/keyboard.js"></script>
+    <script src="./assets/js/maps.js"></script>
+    <script src="./assets/js/camera.js"></script>
+    <script src="./assets/js/player.js"></script>
+    <script src="./assets/js/enemies.js"></script>
+    <script src="./assets/js/enemy.js"></script>
+    <script src="./assets/js/interfacePlayer.js"></script>
+    <script src="./assets/js/background.js"></script>
+    <script src="./assets/js/game.js"></script>
+    <script src="./assets/js/script.js"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
