--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
-    <div id="game">
+    <!-- <div id="game">
       <canvas
         id="canvas"
         style="
@@ -47,9 +47,9 @@
         "
       ></canvas>
     </div>
-    <div id="livebar"></div>
+    <div id="livebar"></div> -->
 
-    <script src="./assets/js/constants.js"></script>
+    <!-- <script src="./assets/js/constants.js"></script>
     <script src="./assets/js/keyboard.js"></script>
     <script src="./assets/js/maps.js"></script>
     <script src="./assets/js/camera.js"></script>
@@ -59,7 +59,7 @@
     <script src="./assets/js/interfacePlayer.js"></script>
     <script src="./assets/js/background.js"></script>
     <script src="./assets/js/game.js"></script>
-    <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/script.js"></script> -->
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
